@@ -57,6 +57,7 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 {
   ok(SPVM::TestCase::NativeAPI->check_native_api_indexes);
   ok(SPVM::TestCase::NativeAPI->check_native_api_constant_values);
+  ok(SPVM::TestCase::NativeAPI->check_native_api_precompile_indexes);
 }
 
 # get_field_string_chars_by_name
