@@ -39,6 +39,7 @@ Revision history for SPVM
           8  SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_INTERFACE
           9  SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
           10 SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT
+        * Add SPVM Precompile Native APIs. The document is SPVM::Document::NativeAPI::Precompile.
         
         [BUG FIX]
         * Fix the bug that multi-dimensional array can't assing to any object array "object[]".
